# llm-egress-guard

./: .gitignore  Makefile  NORMALIZATION_SECURITY.md  README.md  docker-compose.yml  llm_egress_guard_repo_skeleton_prd_technical_prd.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: Dockerfile  __init__.py  actions.py  main.py  metrics.py  normalize.py  parser.py  pipeline.py  policy.py  settings.py
app/detectors/: __init__.py  cmd.py  common.py  exfil.py  pii.py  secrets.py  url.py
app/ml/: __init__.py  preclassifier.py  validator_spacy.py
app/schemas/: api_request.json  api_response.json
app/siem/: __init__.py  config.py  connectors.py  manager.py
ci/: github-actions.yml
config/: policy.yaml
data/ml_training/: output_01.json  output_01.jsonl  output_02.json  output_02.jsonl  output_03.json  output_03.jsonl  output_04.json  output_04.jsonl  output_05.json  output_05.jsonl  output_06.json  output_06.jsonl  output_07.json  output_07.jsonl  preclf_combined.jsonl  preclf_eval.jsonl  preclf_train.jsonl
docs/: Capstone-Project-Essay.md  README.md  ci-wiring-guide.md  future_sprint_notes.md  observability-setup.md  security_assessment_owasp.md
grafana/dashboards/: egress-guard.json
models/: preclf_v1.joblib  preclf_v1.manifest.json
nginx/: nginx.conf
nginx/certs/: fullchain.pem  privkey.pem
prometheus/: prometheus.yml
prompts/ml_training/: 01_educational_security.md  02_malicious_commands.md  (+6 more)
reports/: Final-Project-Report.md  README.md  Sprint-1-Report.docx  Sprint-1-Report.md  Sprint-2-Report.docx  Sprint-2-Report.html  Sprint-2-Report.md  Sprint-3-Report.md  Sprint-4-Report.md  Sprint-5-Report.md  notes_preclf_v1.md
scripts/: bench.sh  check_preclf_model.py  demo_policy_reload.py  demo_scenarios.py  demo_scenarios.sh  export_weekly_report.py  train_preclassifier.py  validate_training_data.py
transports/: aws_lambda_handler.py  http_fastapi_sync.py
(+113 files in other folders)
