[metadata]
name = llm-egress-guard
version = 0.1.0
description = Deterministic guard for LLM egress
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    = .
include_package_data = True
install_requires =
    fastapi>=0.115,<1
    uvicorn>=0.30,<1
    pydantic>=2.9,<3
    pydantic-settings>=2.5,<3
    pyyaml>=6.0,<7
    structlog>=24.1,<25
    python-json-logger>=2.0,<3
    orjson>=3.10,<4
    prometheus-client>=0.20,<1
python_requires = >=3.11

[options.packages.find]
where = .
exclude =
    tests
    scripts
